@@ -18,6 +18,9 @@ Release 0.9.1 - unreleased
 
   IMPROVEMENT
 
+    TAJO-1236: Remove slow 'new String' operation in parquet format. 
+    (jinho)
+
     TAJO-1230: Disable ipv6 support on JVM. (Jihun Kang via hyunsik)
 
     TAJO-1213: Implement CatalogStore::updateTableStats. (jaehwa)
